--- a/dashbord.css
+++ b/dashbord.css
@@ -1,142 +1,135 @@
 :root {
-    --text-link: #525252;
-    --normal-blue: #EBF3FE;
-    --base-blue: #dfe9f7;
-
-    --bg-white: #ffffff;
+    --bg-color: rgb(255, 255, 255);
+    --hover-color: rgb(218, 237, 241);
 }
 
-/* Top navbar  */
-.topNavbar {
-    position: fixed;
-    top: 0;
-    z-index: 3;
-    width: 100vw;
-    height: 69px;
-    border-bottom: 1px solid #eee;
-    background: var(--bg-white);
-}
-
-#open-close-btn {
-    padding: 5px 18px;
-    border-radius: 5px;
-    transition: 0.3s ease-in-out;
-}
-
-#open-close-btn:hover {
-    color: rgb(124, 189, 219);
-    background: var(--normal-blue);
-}
-
-.dashbord-sidebar { /* dashbord sidebar */
+.dashbord-sidenav {
     position: fixed;
     top: 0;
     left: 0;
     width: 69px;
     height: 100vh;
-    background: var(--bg-white);
-    border-right: 1px solid #eee;
     transition: 0.3s;
-    overflow: hidden;
-    z-index: 2;
+    transform: translateX(-300px);
 }
 
-.sidefix-bar {
-    position: relative;
-}
-.sidebar-body {
-    padding-top: 69px;
-    height: 70vh;
-}
-
-.dashbord-sidebar.close {
-    width: 230px !important;
-    transition: 0.2s;
+.dashbord-sidebar-body {
+    overflow-x: hidden;
+    overflow-y: auto;
+    background: var(--bg-color);
+    box-shadow: 0px 0px 20px 3px #ccc;
 }
 
-.navLink {
-    padding: 10px 15px 10px 8px;
-    text-decoration: none;
-    color: var(--text-link);
-    white-space: nowrap;
+.dashbord-sidebar-box {
+    width: 69px;
+    height: 69px;
 }
 
-.navLink.active {
-    background: var(--normal-blue);
-    transition: 0.3s ease-in;
+.dashbord-sidebar-link {
+    color: #808080;
+    font-size: 20px;
+}
+.dashbord-sidebar-link:hover {
+    background: var(--hover-color);
+    color: #444 !important;
+    transition: 0.2s ease-in-out;
 }
 
-.navLink.active:hover {
-    background: var(--base-blue);
-}
-
-.navLink-icon {
-    text-align: center; 
-    width: 50px;
-}
-
-.title {
+.dashbord-sidebar-tittle {
     display: none;
 }
 
-.title.showTitle {
-    display: inline;
+.dashbord-sidebar-tittle.showTitle {
+    display: inline !important;
 }
 
-/* .showSlide {
-    animation: slideIn 0.2s forwards; 
+.w-230 {
+    width: 230PX;
 }
 
-@keyframes slideIn {
-    0% {
-        width: 0;
-        opacity: 0;
-        transform: translateX(-100vw);
+.dashbord-top-nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 50px;
+    background: var(--bg-color);
+    border-bottom: 1px solid #e9e9e9;
+    color: #808080;
+    padding: 0 20px;
+    transition: 0.3s ease;
+}
+
+.dashbord-top-nav-btn {
+    padding: 5px 18px;
+    border-radius: 5px;
+    transition: 0.3s ease-in-out;
+}
+
+.dashbord-top-nav-btn:hover {
+    color: rgb(91, 180, 221);
+    background: var(--hover-color);
+}
+
+.content {
+    margin-top: 75px;
+}
+
+@media screen and (min-width: 750px) {
+    .content {
+        margin-left: 85px;
+        transition: 0.3s;
     }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-        width: calc(100vw - 247px);
+    .dashbord-top-nav {
+        width: calc(100% - 69px);
+        margin-left: 69px;
     }
-} */
-
-.logout-btn {
-    background: var(--normal-blue);
-    transition: 0.3s ease-in;
-}
-
-.logout-btn:hover {
-    background: var(--base-blue);
+    .top_nav_w_230 {
+        width: calc(100% - 230px);
+    }
+    .m-235 {
+        transition: 0.3s;
+        margin-left: 245px;
+    }
+    .dashbord-sidenav {
+        transform: translateX(0);
+    }
 }
 
 @media screen and (max-width: 750px) {
-    .dashbord-sidebar {
-        transform: translateX(-100px);
+    .dashbord-top-nav, .dashbord-sidenav  {
+        z-index: 2;
+    }
+    .hide-scroll {
+        overflow: hidden;
+    }
+    .dashbord-sidenav {
+        transform: translateX(-300px);
     }
 
-    .dashbord-sidebar.close {
-        transform: translateX(0);
+    .translateX-0 {
+        transform: translateX(-0);
     }
 
-    .overlays {
-        position: fixed;
-        right: 0;
-        background: rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(2px);
-        width: 0;
-        height: 100vh;
-    }
-
-    #overlay.h {
+    .overlay {
         display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        background: rgba(0, 0, 0, 0.3);
+        width: 100vw;
+        height: 100vh;
+        z-index: 1;
+        transition: 0;
     }
+    
+    .overlay-effect {
+        display: block;
+    }
+
 }
 
-.showSlide {
-    width: 100vw; 
-}
-
-/* Custom classes  */
-.cursor-pointer {
-    cursor: pointer;
+.active-navlink {
+    background: var(--hover-color);
 }
